# adoc

./: .gitignore  .mcp.json  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  agentdoc.config.yaml  prek.toml
crates/adoc-cli/: Cargo.toml
crates/adoc-cli/src/: cli.rs  config.rs  error.rs  main.rs
crates/adoc-cli/src/adapters/: artifact_record_resolver.rs  mod.rs  system_clock.rs
crates/adoc-cli/src/commands/: assess_changes.rs  build.rs  check.rs  contradictions.rs  diff.rs  graph.rs  impacted_by.rs  init.rs  migrate.rs  mod.rs  patch.rs  review.rs  search.rs  stale.rs  why.rs
crates/adoc-cli/src/presentation/: json.rs  markdown.rs  mod.rs  plain.rs  port.rs  styled.rs  terminal.rs
crates/adoc-cli/src/presentation/style/: chip.rs  footer.rs  humanise.rs  key.rs  kv.rs  mod.rs  palette.rs  relations.rs  wikilink.rs
crates/adoc-cli/tests/: agent_instruction_cli.rs  api_cli.rs  apply_loop.rs  assess_changes_cli.rs  billing_pilot.rs  check_cli.rs  config_cli.rs  constraint_cli.rs  contradiction_cli.rs  diff_cli.rs  evaluation_date_cli.rs  evidence_model_cli.rs  example_cli.rs  expanded_pilot.rs  explain_cli.rs  format_flag_cli.rs  graph_cli.rs  help_cli.rs  init_cli.rs  manifest_guard.rs  markdown_pilot.rs  migrate_cli.rs  observation_cli.rs  patch_cli.rs  policy_cli.rs  procedure_cli.rs  question_cli.rs  retrieval_pilot.rs  review_cli.rs  search_cli.rs  semantic_search_cli.rs  snapshots_cli.rs  source_cli.rs  task_cli.rs  v1_5_local_workflow_cli.rs  why_cli.rs
crates/adoc-cli/tests/fixtures/review_markdown/: diff.md  review.md
crates/adoc-cli/tests/fixtures/v0_1/: list_with_html_in_second_item.adoc  (+5 more)
crates/adoc-cli/tests/snapshots/: explain_cli__explain_json.snap  explain_cli__explain_plain.snap  explain_cli__explain_styled.snap  snapshots_cli__check_claim_basic_clean.snap  snapshots_cli__check_claim_id_duplicate_same_page_flags.snap  snapshots_cli__check_claim_id_invalid_uppercase_flags.snap  snapshots_cli__check_claim_missing_status_flags.snap  snapshots_cli__check_decision_accepted_empty_decided_by_flags.snap  snapshots_cli__check_decision_accepted_missing_decided_by_flags.snap  snapshots_cli__check_decision_invalid_status_flags.snap  snapshots_cli__check_decision_missing_status_flags.snap  snapshots_cli__check_glossary_missing_body_flags.snap  snapshots_cli__check_list_html_in_second_item_bug_state.snap.new  snapshots_cli__check_list_html_in_second_item_flags.snap  snapshots_cli__check_nested_typed_block_in_body_flags.snap  snapshots_cli__check_nested_typed_block_in_fields_flags.snap  snapshots_cli__check_unknown_kind_flags.snap  snapshots_cli__check_unknown_kind_freeform_flags.snap  snapshots_cli__check_verified_claim_missing_evidence_flags.snap  snapshots_cli__check_verified_claims_pilot_clean.snap  snapshots_cli__check_warning_invalid_severity_flags.snap  snapshots_cli__check_warning_missing_body_flags.snap  snapshots_cli__check_warning_missing_severity_flags.snap  snapshots_cli__check_warning_severity_casing_flags.snap  why_cli__why_json.snap  why_cli__why_plain.snap  why_cli__why_styled.snap
crates/adoc-cli/tests/support/: mod.rs  v1_4.rs
crates/adoc-core/: Cargo.toml
crates/adoc-core/src/: ast.rs  compile.rs  diagnostic.rs  identity.rs  inline.rs  lib.rs  parser.rs  source.rs  source_provider.rs  validate.rs
crates/adoc-core/src/application/: apply.rs  artifact_inspection.rs  change_assessment.rs  compile.rs  evidence_anchor.rs  graph.rs  migrate.rs  mod.rs  patch.rs  resolve_knowledge_objects.rs  resolve_object_references.rs  retrieval.rs  retrieval_format.rs  review.rs  review_envelope.rs  search_artifact.rs  signals.rs
crates/adoc-core/src/artifact/: agent_json.rs  mod.rs
crates/adoc-core/src/domain/: artifact.rs  ast.rs  diagnostic.rs  hashing.rs  identity.rs  inline.rs  mod.rs  obligation.rs  project_config.rs  source.rs  url_safety.rs  values.rs
crates/adoc-core/src/infrastructure/: mod.rs
crates/adoc-core/src/language/: graph_projection.rs  mod.rs
crates/adoc-core/src/parser/: builders.rs  mod.rs  state.rs
crates/adoc-core/src/render/: html.rs  mod.rs
crates/adoc-core/src/scan/: raw_html.rs
crates/adoc-core/tests/: artifact_inspection.rs  clean_artifact_fixtures.rs  compile_workspace.rs  diagnostic_fixtures.rs  diagnostic_ordering.rs  explain_service.rs  graph.rs  migrate.rs  object_id_validation.rs  patch_apply.rs  public_surface.rs  raw_html_scanning.rs  retrieval.rs  v1_4_semantic_load.rs
crates/adoc-core/tests/support/: mod.rs
crates/adoc-local/: Cargo.toml
crates/adoc-local/src/: config.rs  context.rs  error.rs  lib.rs  path_policy.rs  use_cases.rs
crates/adoc-local/src/use_cases/: artifact_commit.rs  changes.rs  mod.rs  project.rs  queries.rs  shared.rs
crates/adoc-local/tests/: architecture.rs  local_workflow.rs  path_policy.rs  public_surface.rs
crates/adoc-mcp/: Cargo.toml
crates/adoc-mcp/src/: envelope.rs  lib.rs  main.rs  prompts.rs  resources.rs
crates/adoc-mcp/tests/: contract_schemas.rs  docs_manifest_guard.rs  mcp_adapter.rs  stdio_dogfood.rs
crates/adoc-mcp/tests/support/: mod.rs
(+491 files in other folders)
