[package]
name = "adoc-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "adoc"
path = "src/main.rs"

[dependencies]
adoc-core = { path = "../adoc-core" }
clap = { version = "4", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
adoc-core = { path = "../adoc-core", features = ["test-embedding-provider"] }
insta = "1"
