[package]
name = "adoc-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "adoc"
path = "src/main.rs"

[dependencies]
adoc-core = { path = "../adoc-core" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
is-terminal = "0.4"
serde_json = "1"
supports-color = "3"
thiserror = "1"

[dev-dependencies]
adoc-core = { path = "../adoc-core", features = ["test-embedding-provider"] }
assert_cmd = "2"
insta = "1"
predicates = "3"
strip-ansi-escapes = "0.2"
