[package]
name = "adoc-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "adoc"
path = "src/main.rs"

[dependencies]
adoc-core = { path = "../adoc-core" }
adoc-local = { path = "../adoc-local" }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
clap = { version = "4", features = ["derive"] }
is-terminal = "0.4"
owo-colors = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[features]
fastembed-it = []

[dev-dependencies]
adoc-core = { path = "../adoc-core", features = ["test-embedding-provider"] }
assert_cmd = "2"
insta = { version = "1", features = ["filters"] }
predicates = "3"
serde-saphyr = "0.0.21"
strip-ansi-escapes = "0.2"
