[package]
name = "adoc-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
fastembed-it = []
test-embedding-provider = []

[dependencies]
fastembed = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3"
