[package]
name = "adoc-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["embeddings"]
embeddings = ["dep:fastembed"]
fastembed-it = ["embeddings"]
test-embedding-provider = []

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
fastembed = { version = "5", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
