[package]
name = "adoc-core"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[features]
default = ["embeddings"]
embeddings = ["dep:fastembed", "dep:dirs"]
fastembed-it = ["embeddings"]
test-embedding-provider = []

[dependencies]
tracing = "0.1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
dirs = { version = "6", optional = true }
fastembed = { version = "5", optional = true }
pulldown-cmark = { version = "0.12", default-features = false, features = ["html"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2.0.17"
url = "2"

[dev-dependencies]
serial_test = "3"
tempfile = "3"

[[test]]
name = "v1_4_semantic_load"
required-features = ["test-embedding-provider"]
