[package]
name = "adoc-local"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
tracing = "0.1"
adoc-core = { path = "../adoc-core" }
chrono = { version = "0.4.42", default-features = false, features = ["clock"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde-saphyr = "0.0.29"
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.23.0"
